--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "magento/module-store": "101.1.*",
         "magento/module-tax": "100.4.*",
         "magento/module-ui": "101.2.*",
+        "magento/module-widget": "101.2.*",
         "module-shipping": "100.4.*"
     },
     "suggest": {
