--- a/.github/workflows/codesniffer-actions.yml
+++ b/.github/workflows/codesniffer-actions.yml
@@ -1,4 +1,4 @@
-name: Code Sniffer Action
+name: Magento 2 Coding Standard
 run-name: Code Sniffer Testing Action
 on:
   pull_request:
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "The workflow is now ready to test your code on the runner."
-      - name: Setup PHP 8.2
+      - name: Setup PHP 8.3
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.2
+          php-version: 8.3
       - name: Show PHP version
         run: |
           php -v
@@ -42,5 +42,5 @@ jobs:
           vendor/bin/phpcs -i
       - name: Run Magento Code Sniffer
         run: |
-          magento-coding-standard/vendor/bin/phpcs --standard=Magento2 ${{ github.workspace }} --extensions=php,js,phtml,html,xml --ignore=*/magento-coding-standard/*
+          magento-coding-standard/vendor/bin/phpcs --standard=Magento2 ${{ github.workspace }} --extensions=php,js,phtml,html,xml,less --ignore=*/magento-coding-standard/*
       - run: echo "This job's status is ${{ job.status }}."
